продолжаю разделение, многочисленные правки